--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./assets/Frame.png" type="image/x-icon">
     <title>Gaming landing page</title>
     <link rel="stylesheet" href="styles/index.css">
     <link rel="stylesheet" href="styles/responsive.css">
+    <script src="https://kit.fontawesome.com/f0302cb220.js" crossorigin="anonymous"></script>
 </head>
 <body>
     
