--- a/index.html
+++ b/index.html
@@ -10,6 +10,25 @@
     <script src="https://kit.fontawesome.com/f0302cb220.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+      <!-- this is nav-ber start here -->
+
+      
+      <nav>
+        <div class="nav-container">
+          <div class="nav-logo">
+                <img src="./assets/Frame.png" alt="">
+                <p><span class="game">G</span>amer</p>
+          </div>
+          <div class="manu-container">
+            <a href="">About us</a>
+            <a href="">Developers</a>
+            <a href="" class="follow-us-btn">Follow Us On <i class="fa-brands fa-youtube" style="color: red; width: 25px;height: 20px;"></i><i class="fa-brands fa-tiktok" style="width: 20px; height: 20px;"></i></a>
+          </div>
+        </div>
+ </nav>
+
+
+
+      <!-- this is nav-ber end here -->
 </body>
 </html>
