added online game text with style

--- a/index.html
+++ b/index.html
@@ -54,6 +54,24 @@
 
       <!-- banner section end here -->
 
+      <!-- online game section start here -->
+
+           <section class="online-game">
+            <div class="online-game-text">
+              <h1>Online Games <span class="funny-videos">Funny Videos</span></h1>
+              <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+            </div>
+            <div class="online-game-container">
+             <div class="online-game-card">
+              <img src="./assets/Rectangle 4.png" alt="">
+             </div>
+            </div>
+
+           </section>
+
+
+      <!-- online game section end here -->
+
 
 </body>
 </html>
