added online game card with style

--- a/index.html
+++ b/index.html
@@ -64,7 +64,22 @@
             <div class="online-game-container">
              <div class="online-game-card">
               <img src="./assets/Rectangle 4.png" alt="">
+              <p>No Download. No Installs. Play games Instantly on Gamer.</p>
              </div>
+             <div class="online-game-card">
+              <img src="./assets/Rectangle 5.png" alt="">
+              <p>Did you score? #unblockedgames #school</p>
+             </div>
+             <div class="online-game-card">
+              <img class="rectangle-7" src="./assets/Rectangle 7.png" alt="">
+              <p>Breaking game records like OG</p>
+             </div>
+             <div class="online-game-card">
+              <img src="./assets/Rectangle 6.png" alt="">
+              <p>Busted gaming on school laptop, but you are still lit.</p>
+             </div>
+
+
             </div>
 
            </section>
