added play instantly

--- a/index.html
+++ b/index.html
@@ -86,7 +86,30 @@
 
 
       <!-- online game section end here -->
+         
 
+      <!-- play instantly start here -->
+
+           <section class="play-instantly">
+            <div class="play-instantly-container">
+               <div class="play-instantly-text">
+                         <h1><span class="span-play-instantly">Play Instantly,<br>  </span>
+                          No Downloads
+                          No Installs.</h1>
+                          <p>Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
+               </div>
+               <div class="play-instantly-picture">
+                <img src="./assets/Rectangle 55.png" alt="">
+                     <div class="regtangle-66">
+                      <img src="./assets/Rectangle 66.png" alt="">
+                     </div>
+               </div>
+            </div>
+
+           </section>
+
+
+      <!-- play instantly end here -->
 
 </body>
 </html>
