--- a/index.html
+++ b/index.html
@@ -164,6 +164,44 @@
 
 
       <!-- game section end here -->
+                
 
+      <!-- footer section start here -->
+
+          <section class="footer-section">
+                <div class="footer-container">
+                  <div class="footer-text">
+                    <div class="footer-logo">
+                      <img src="./assets/Frame.png" alt="">
+                      <p><span class="game">G</span><span class="amer">amer</span></p>
+                           </div>
+                           <div class="footer-small-text">
+                            <p>Our Story</p>
+                            <p>Games</p>
+                            <p>Web Games</p>
+                            <p>Careers</p>
+                            <p>Support</p>
+                            <p>My Account</p>
+                           </div>
+
+                           <div class="icon">
+                            <span><i class="fa-brands fa-twitter"></i></span>
+                            <span><i class="fa-brands fa-facebook"></i></span>
+                            <span><i class="fa-brands fa-youtube"></i></span>
+                           </div>
+                           <div class="terms">
+                            <p>Terms and Conditions</p>
+                            <p>Privacy Policy</p>
+                            <p>Cookie Policy</p>
+                            <p>Privacy Settings</p>
+                           </div>
+                           <p class="play"> Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+                  </div>
+                </div>
+
+          </section>
+
+
+      <!-- footer section end here -->
 </body>
 </html>
